# ChangeLog for dev-java/jakarta-oro
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-oro/ChangeLog,v 1.13 2007/01/26 09:43:04 caster Exp $

  26 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -jakarta-oro-2.0.8-r1.ebuild:
  Gen-1 punt.

  26 Jan 2007; Steve Dibb <beandog@gentoo.org> jakarta-oro-2.0.8-r2.ebuild:
  amd64 stable, bug 156988

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  Stable on ppc wrt bug #156988.

  04 Dec 2006; Markus Rothe <corsair@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  Stable on ppc64; bug #156988

  04 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  stable x86, bug #156988

  03 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  jakarta-oro-2.0.8-r1.ebuild, jakarta-oro-2.0.8-r2.ebuild:
  Moved the very long description from ebuilds to metadata.xml.

  17 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  Keyworded ~ia64.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  jakarta-oro-2.0.8-r1.ebuild, jakarta-oro-2.0.8-r2.ebuild:
  Dropping sparc keywords, see #96229

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  Add ~x86-fbsd keyword.

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  jakarta-oro-2.0.8-r2.ebuild:
  Added java-ant-2 to inherit.

*jakarta-oro-2.0.8-r2 (20 Jul 2006)

  20 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  +jakarta-oro-2.0.8-r2.ebuild:
  Revision bump to support new Java system.

  02 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> jakarta-oro-2.0.8.ebuild:
  setting all keywords back to arch, since its only a package move.

*jakarta-oro-2.0.8 (29 Mar 2005)

  29 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> +metadata.xml,
  +jakarta-oro-2.0.8.ebuild:
  Initial import, move from dev-java/oro to dev-java/jakarta-oro. see #71337.