@@ -1,12 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST jakarta-oro-2.0.8.tar.gz 345304 RMD160 713e46de59acbbe7e51fed29c66e02d51f35cafd SHA1 23d708b77885c97149873e808fdf4bcf05fe6708 SHA256 4c4f3c7c479994c3ce09f542d4fbdc03eed58a2d7f320d32f2baf238b5b6f566
-EBUILD jakarta-oro-2.0.8-r2.ebuild 1043 RMD160 010f076c24a896fa46c73348de9be7ca6a8651f5 SHA1 025ba1b7236af4761fc1be1c598d98699c76a3ed SHA256 a331921ecf708da08c15934f5c064167fffe3bfc4dc55da9e7117621782244bc
-MD5 2fd4e08bc26e1afb57b221bcad78c563 jakarta-oro-2.0.8-r2.ebuild 1043
-RMD160 010f076c24a896fa46c73348de9be7ca6a8651f5 jakarta-oro-2.0.8-r2.ebuild 1043
-SHA256 a331921ecf708da08c15934f5c064167fffe3bfc4dc55da9e7117621782244bc jakarta-oro-2.0.8-r2.ebuild 1043
-MISC ChangeLog 2013 RMD160 6e77fad486babc6d1e1f6310a0b71c5a3f4a4a0a SHA1 df57f4768d9ec4127a217d0e8d69d0b41a7b7d68 SHA256 c5f2790ac49b8454366e96001df9a38a9a67ce966d4fa93205fd4a6a9d93379f
-MD5 48608430f9cb4f6f43382545027c1a6d ChangeLog 2013
-RMD160 6e77fad486babc6d1e1f6310a0b71c5a3f4a4a0a ChangeLog 2013
-SHA256 c5f2790ac49b8454366e96001df9a38a9a67ce966d4fa93205fd4a6a9d93379f ChangeLog 2013
+EBUILD jakarta-oro-2.0.8-r2.ebuild 991 RMD160 575f6a21e281c56233a802c00dcc07141d74338d SHA1 e6ed8c47c464f85c7234544e0be604ea6baf610f SHA256 cd7184a46a54ca255f7504efd40548fca0192dbdec0f1480246b7d33da146ea1
+MD5 0685d93a02d932e211b2c78da1c99ff7 jakarta-oro-2.0.8-r2.ebuild 991
+RMD160 575f6a21e281c56233a802c00dcc07141d74338d jakarta-oro-2.0.8-r2.ebuild 991
+SHA256 cd7184a46a54ca255f7504efd40548fca0192dbdec0f1480246b7d33da146ea1 jakarta-oro-2.0.8-r2.ebuild 991
+MISC ChangeLog 2147 RMD160 c14401576ec1010638f600170832e971acb57b2a SHA1 9da4f5cf1eb6ad49c326efa64ad5870d9b0385cd SHA256 778977f0bed440e9c95f002db25506adc2730e2837f117e9f195513b7b383fd0
+MD5 602cb5d3604b804add35cfb222902e61 ChangeLog 2147
+RMD160 c14401576ec1010638f600170832e971acb57b2a ChangeLog 2147
+SHA256 778977f0bed440e9c95f002db25506adc2730e2837f117e9f195513b7b383fd0 ChangeLog 2147
 MISC metadata.xml 435 RMD160 3a21161e779ee28ef4e5cefdb373a70f31a76fda SHA1 6346d38ef9dbfb41e0b56504988b2c158a777a8b SHA256 379d7623a8e19838dd21b7c37b62fb4a1fc5400e8930bde82a0eaf5cd1c9eba8
 MD5 ad5dae0eaab0ad2f59b249ca503575e4 metadata.xml 435
 RMD160 3a21161e779ee28ef4e5cefdb373a70f31a76fda metadata.xml 435
@@ -14,3 +17,10 @@ SHA256 379d7623a8e19838dd21b7c37b62fb4a1fc5400e8930bde82a0eaf5cd1c9eba8 metadata
 MD5 c87c26fc95556e2ddfdea1b75f28e1bc files/digest-jakarta-oro-2.0.8-r2 253
 RMD160 d397cf1b7eff9a6f43066a28985eeaacb3977633 files/digest-jakarta-oro-2.0.8-r2 253
 SHA256 ef6ed24aef9cfb8b5c363ed03c0dd2c7a0b87db6f237e72739471c18a0358864 files/digest-jakarta-oro-2.0.8-r2 253
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGiij0cxLzpIGCsLQRAhSYAJ9s8rFvMOmgQoM23HzbdY11mi6ASwCcDpub
+p9/ND3uhy+kqtZXowWl9VaA=
+=ateY
+-----END PGP SIGNATURE-----
