@@ -1,6 +1,8 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-oro/jakarta-oro-2.0.8-r2.ebuild,v 1.10 2007/01/26 05:55:29 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-oro/jakarta-oro-2.0.8-r2.ebuild,v 1.11 2007/07/03 10:46:01 betelgeuse Exp $
+
+JAVA_PKG_IUSE="doc source"
 
 inherit java-pkg-2 java-ant-2
 
@@ -11,16 +13,12 @@ SRC_URI="mirror://apache/jakarta/oro/source/${P}.tar.gz"
 LICENSE="Apache-1.1"
 SLOT="2.0"
 KEYWORDS="amd64 ~ia64 ppc ppc64 x86 ~x86-fbsd"
-IUSE="doc examples source"
+IUSE="examples"
 
-DEPEND=">=virtual/jdk-1.3
-	>=dev-java/ant-core-1.4
-	source? ( app-arch/zip )"
+DEPEND=">=virtual/jdk-1.3"
 RDEPEND=">=virtual/jre-1.3"
 
-src_compile() {
-	eant $(use_doc javadocs) jar
-}
+EANT_DOC_TARGET="javadocs"
 
 src_install() {
 	java-pkg_newjar ${PN}*.jar
