@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jakarta-oro
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-oro/ChangeLog,v 1.13 2007/01/26 09:43:04 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-oro/ChangeLog,v 1.14 2007/07/03 10:46:01 betelgeuse Exp $
+
+  03 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
+  jakarta-oro-2.0.8-r2.ebuild:
+  Use JAVA_PKG_IUSE and general src_compile.
 
   26 Jan 2007; Vlastimil Babka <caster@gentoo.org>
   -jakarta-oro-2.0.8-r1.ebuild:
